# SentinelLM

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  config.yaml  docker-compose.prod.yml  docker-compose.yml  locustfile.py  pyproject.toml  requirements-dev.txt  requirements-lint.txt  requirements.txt
.github/workflows/: ci.yml
dashboard/: package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx
dashboard/app/dashboard/: layout.tsx  page.tsx
dashboard/components/dashboard/: FlagRateChart.tsx  MetricsChart.tsx  SummaryCards.tsx
dashboard/components/eval/: RegressionBadge.tsx  ScorecardTable.tsx
dashboard/components/feed/: FeedItem.tsx  LiveFeed.tsx
dashboard/lib/: api.ts  types.ts  websocket.ts
docker/: Dockerfile.api  Dockerfile.dashboard
evals/: golden_qa.jsonl
sentinel/: main.py  settings.py
sentinel/api/: eval.py  health.py  metrics.py  middleware.py  proxy.py  review.py  scores.py  websocket.py
sentinel/cache/: client.py
sentinel/chain/: aggregator.py  runner.py
sentinel/eval_pipeline/: cli.py  reporter.py  runner.py
sentinel/evaluation/: __init__.py  dataset.py  engine.py  stats.py
sentinel/evaluators/: base.py  registry.py
sentinel/evaluators/input/: pii.py  (+2 more)
sentinel/proxy/: anthropic.py  base.py  factory.py  gemini.py  ollama.py  openai.py
sentinel/storage/: database.py  models.py  schema.sql
sentinel/ws/: broadcaster.py
tests/: conftest.py  test_config.yaml
tests/integration/: test_block_flow.py  test_eval_pipeline.py  test_proxy_endpoint.py
(+34 files in other folders)
