[project]
name = "sentinellm"
version = "1.0.0"
description = "LLM Guardrails & Evaluation Middleware"
requires-python = ">=3.11"

[project.scripts]
sentinel = "sentinel.eval_pipeline.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # pycodestyle, pyflakes, isort, pyupgrade

[tool.ruff.lint.isort]
known-first-party = ["sentinel"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false                  # enable gradually as project matures
